# metropolia-weather-map

./: .env.local  .gitignore  .prettierrc  Dockerfile  README.md  Visio.docx  compose.db.yml  compose.wsl.yml  compose.yml  db.session.sql  init.sql  package-lock.json  package.json  pnpm-lock.yaml  start_db.ps1  tailwind.config.ts
server/: .env.local  Dockerfile  compose.yml  database.py  db.py  main.py  pyproject.toml  requirements.txt  ruff.toml
server/analysis/: avg_humidities.py  cloudiness_vs_temp.py  create_sunrise_sunset_csv.py  daily_daytime_temp_diff.py  fluctuation_and_decomposition_analysis.py  humidity_delta_sun_vs_shade.py  max_temps.py  monthly_daytime_temp_diff.py  temp_vs_humidity_correlation.py  temperature_delta_sun_vs_shade.py  utils.py
server/analysis/time-series-analysis/: anomalous_sensor_detection.py  data_calculations.py  data_loading.py  data_preprocessing.py  data_visualization.py  sprint4_analysis.pptx
server/api/: database.py  main.py  models.py  requirements.txt
server/api/routes/: analysis_route.py  sensor_data_routes.py  sensor_route.py  sensor_routes.py
server/database/: custom_types.py  db.py  requirements.txt  tables.py
server/database/repositories/: sensor_repo.py
server/docker/: Dockerfile  compose.yml
server/legacy/routes/: sensor_routes.py
server/routers/: sensors.py
server/routes/: analysis_route.py  analysis_route_utils.py
server/src/: cache.py  database.py  main.py  models.py  notes.md  routes.py  sensor_repo.py  tag_data.py  test.py
server/src/analysis/: all_sensors_graph.py  continental_coastal_temp_diff.py  (+12 more)
(+179 files in other folders)
